finished first part

--- a/intro.html
+++ b/intro.html
@@ -28,6 +28,8 @@
       <li>item 7</li>
     </ol>
 
+    <button type="submit" id="b">Add element</button>
+
     <script src="intro.js"></script>
   </body>
 
