--- a/intro.html
+++ b/intro.html
@@ -29,6 +29,14 @@
     </ol>
 
     <button type="submit" id="b">Add element</button>
+    
+    <hr>
+
+    <ol id="fibolist">
+      <li class="fol">1</li>
+    </ol>
+
+    <button type="submit" id="f">Fibo</button>
 
     <script src="intro.js"></script>
   </body>
